// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SmallAppItem component should render correctly an app 1`] = `
<button
  className="sto-small-app-item"
  onClick={[MockFunction]}
  type="button"
>
  <div
    className="sto-small-app-item-icon-wrapper"
  >
    <AppIcon
      app={
        Object {
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "cozy",
          "icon": "<svg></svg>",
          "name": "Test",
          "namePrefix": "Cozy",
          "onClick": [MockFunction],
          "slug": "test",
          "version": "3.0.3",
        }
      }
      className="sto-small-app-item-icon"
      domain={null}
      secure={false}
    />
  </div>
  <div
    className="sto-small-app-item-desc"
  >
    <h4
      className="sto-small-app-item-title"
    >
      Cozy Test
    </h4>
    <p
      className="sto-small-app-item-developer"
      title="Cozy"
    >
      By Cozy
    </p>
  </div>
</button>
`;

exports[`SmallAppItem component should render correctly an app in maintenance 1`] = `
<button
  className="sto-small-app-item"
  onClick={[MockFunction]}
  type="button"
>
  <div
    className="sto-small-app-item-icon-wrapper"
  >
    <AppIcon
      app={
        Object {
          "developer": Object {
            "name": "Naming me",
          },
          "editor": "",
          "icon": "<svg></svg>",
          "installed": true,
          "installedAppLink": "test2.cozy.mock",
          "maintenance": Object {
            "maintenance_options": Object {},
          },
          "name": "Test2",
          "onClick": [MockFunction],
          "slug": "test2",
          "version": "3.0.3-beta7483",
        }
      }
      className="sto-small-app-item-icon"
      domain={null}
      secure={false}
    />
  </div>
  <div
    className="sto-small-app-item-desc"
  >
    <h4
      className="sto-small-app-item-title"
    >
      Test2
    </h4>
    <p
      className="sto-small-app-item-developer"
      title="Naming me"
    >
      By Naming me
    </p>
    <p
      className="sto-small-app-item-status"
    >
      In maintenance
    </p>
  </div>
</button>
`;

exports[`SmallAppItem component should render correctly an app with iconToLoad (icon being fetching) 1`] = `
<button
  className="sto-small-app-item"
  onClick={[MockFunction]}
  type="button"
>
  <div
    className="sto-small-app-item-icon-wrapper"
  >
    <AppIcon
      app={
        Object {
          "developer": Object {
            "name": "Naming me",
          },
          "editor": "",
          "icon": "<svg></svg>",
          "iconToLoad": true,
          "installed": true,
          "installedAppLink": "test2.cozy.mock",
          "name": "Test2",
          "onClick": [MockFunction],
          "slug": "test2",
          "version": "3.0.3-beta7483",
        }
      }
      className="sto-small-app-item-icon"
      domain={null}
      secure={false}
    />
  </div>
  <div
    className="sto-small-app-item-desc"
  >
    <h4
      className="sto-small-app-item-title"
    >
      Test2
    </h4>
    <p
      className="sto-small-app-item-developer"
      title="Naming me"
    >
      By Naming me
    </p>
    <p
      className="sto-small-app-item-status"
    >
      Installed
    </p>
  </div>
</button>
`;

exports[`SmallAppItem component should render correctly an app with iconToLoad if isMobile 1`] = `
<button
  className="sto-small-app-item"
  onClick={[MockFunction]}
  type="button"
>
  <div
    className="sto-small-app-item-icon-wrapper"
  >
    <AppIcon
      app={
        Object {
          "developer": Object {
            "name": "Naming me",
          },
          "editor": "",
          "icon": "<svg></svg>",
          "iconToLoad": true,
          "installed": true,
          "installedAppLink": "test2.cozy.mock",
          "name": "Test2",
          "onClick": [MockFunction],
          "slug": "test2",
          "version": "3.0.3-beta7483",
        }
      }
      className="sto-small-app-item-icon"
      domain={null}
      secure={false}
    />
  </div>
  <div
    className="sto-small-app-item-desc"
  >
    <h4
      className="sto-small-app-item-title"
    >
      Test2
    </h4>
    <p
      className="sto-small-app-item-developer"
      title="Naming me"
    >
      By Naming me
    </p>
    <p
      className="sto-small-app-item-status"
    >
      Installed
    </p>
  </div>
</button>
`;

exports[`SmallAppItem component should render correctly an app without developer property 1`] = `
<button
  className="sto-small-app-item"
  onClick={[MockFunction]}
  type="button"
>
  <div
    className="sto-small-app-item-icon-wrapper"
  >
    <AppIcon
      app={
        Object {
          "editor": "cozy",
          "icon": "<svg></svg>",
          "name": "Test",
          "namePrefix": "Cozy",
          "onClick": [MockFunction],
          "slug": "test",
          "version": "3.0.3",
        }
      }
      className="sto-small-app-item-icon"
      domain={null}
      secure={false}
    />
  </div>
  <div
    className="sto-small-app-item-desc"
  >
    <h4
      className="sto-small-app-item-title"
    >
      Cozy Test
    </h4>
  </div>
</button>
`;

exports[`SmallAppItem component should render correctly an installed app 1`] = `
<button
  className="sto-small-app-item"
  onClick={[MockFunction]}
  type="button"
>
  <div
    className="sto-small-app-item-icon-wrapper"
  >
    <AppIcon
      app={
        Object {
          "developer": Object {
            "name": "Naming me",
          },
          "editor": "",
          "icon": "<svg></svg>",
          "installed": true,
          "installedAppLink": "test2.cozy.mock",
          "name": "Test2",
          "onClick": [MockFunction],
          "slug": "test2",
          "version": "3.0.3-beta7483",
        }
      }
      className="sto-small-app-item-icon"
      domain={null}
      secure={false}
    />
  </div>
  <div
    className="sto-small-app-item-desc"
  >
    <h4
      className="sto-small-app-item-title"
    >
      Test2
    </h4>
    <p
      className="sto-small-app-item-developer"
      title="Naming me"
    >
      By Naming me
    </p>
    <p
      className="sto-small-app-item-status"
    >
      Installed
    </p>
  </div>
</button>
`;

exports[`SmallAppItem component should render correctly an installed app without icon provided 1`] = `
<button
  className="sto-small-app-item"
  onClick={[MockFunction]}
  type="button"
>
  <div
    className="sto-small-app-item-icon-wrapper"
  >
    <AppIcon
      app={
        Object {
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "cozy",
          "icon": "",
          "name": "Test",
          "namePrefix": "Cozy",
          "onClick": [MockFunction],
          "slug": "test",
          "version": "3.0.3",
        }
      }
      className="sto-small-app-item-icon"
      domain={null}
      secure={false}
    />
  </div>
  <div
    className="sto-small-app-item-desc"
  >
    <h4
      className="sto-small-app-item-title"
    >
      Cozy Test
    </h4>
    <p
      className="sto-small-app-item-developer"
      title="Cozy"
    >
      By Cozy
    </p>
  </div>
</button>
`;
